# crosoc

./: CMakeLists.txt  Config.h  Crosoc.vcxproj  Crosoc.vcxproj.filters  Endpoint.cpp  Endpoint.h  IHTTPConnection.h  ITCPConnection.h  IUDPConnection.h  ProtocolType.h  README.md  crosoc.cpp  crosoc.h  dllmain.cpp  http.cpp  http.h  net.h  shared.cpp  shared.h  ssl_conn.cpp  ssl_conn.h  tcp.cpp  tcp.h  udp.cpp  udp.h  wsa_guard.cpp  wsa_guard.h
